# binance-orderbook-visualizer

./: Cargo.toml  README.md  SEQUENCE_DIAGRAM.md
src/: kmeans.rs  main.rs
